# wrla.ch

./: .frogrc  .gitignore  0001-New-post-on-talos-trychooser.patch  About.html  CNAME  Makefile  README.md  frog.rkt  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html  index.html  package-lock.json  package.json  pyproject.toml  sitemap.txt  tailwind.config.js
2018/01/: giving-and-receiving-help-at-mozilla.html  quitting-twitter.html
_src/: About.md  index-template.html  page-template.html  post-template.html
_src/posts/: 2009-02-02-maps-urls-on-mobile-safari.md  2009-03-06-breaking-news-cat-watches-himself-in-tv.md  2009-03-25-hbusca-and-thoughts-about-crowdsourcing.md  2009-04-23-creating-a-google-transit-feed-for-fun-and-profit.md  2009-07-28-iphone-hackathon-4-charity-halifax-edition.md  2009-08-21-icon-metaphor-fail.md  2009-12-15-changes.md  2010-01-02-projects-for-2010.md  2010-02-11-its-alive.md  2010-03-07-adventures-in-processing-with-prender.md  2010-03-16-nexus-one.md  2010-03-23-fun-with-wifidog.md  2010-04-10-i-can-has-edmonton-transit-iphone-app.md  2010-04-10-oh-the-lines-and-some-help-for-edmonton.md  2010-05-24-hbus-is-back.md  2010-08-29-google-transit-halifax-is-down-but-hbus-and-transit-to-go-are-still-up.md  2010-11-17-back-to-wordperfect-libwpd-0-9-0.md  2010-11-19-channa-masala.md  (+149 more)
_util/: date-format.rkt  tag-format.rkt
css/: custom.css  pygments.css  style.css  style.css.in
feeds/: AI.atom.xml  AI.rss.xml  Android.atom.xml  Android.rss.xml  BIXI.atom.xml  BIXI.rss.xml  Bikes.atom.xml  Bikes.rss.xml  Buddhism.atom.xml  Buddhism.rss.xml  Business.atom.xml  Business.rss.xml  Cats.atom.xml  Cats.rss.xml  Coffee.atom.xml  Coffee.rss.xml  Community.atom.xml  Community.rss.xml  Counting.atom.xml  Counting.rss.xml  Data-Visualization.atom.xml  Data-Visualization.rss.xml  Data.atom.xml  Data.rss.xml  Docker.atom.xml  Docker.rss.xml  Documentation.atom.xml  Documentation.rss.xml  Ebola.atom.xml  Ebola.rss.xml  Eideticker.atom.xml  Eideticker.rss.xml  Environment.atom.xml  Environment.rss.xml  FirefoxOS.atom.xml  FirefoxOS.rss.xml  Food.atom.xml  Food.rss.xml  Free-Software.atom.xml  Free-Software.rss.xml  (+116 more)
idrs/: 202602010059-reboot-in-python.md
sitegen/: __init__.py  cli.py  config.py  markdown.py  site.py
src/: _redirects
tags/: AI.html  Android.html  BIXI.html  Bikes.html  Buddhism.html  Business.html  Cats.html  Coffee.html  Community.html  Counting.html  Data-Visualization-2.html  Data-Visualization.html  Data.html  Docker.html  Documentation.html  Ebola.html  Eideticker-2.html  Eideticker-3.html  Eideticker.html  Environment.html  FirefoxOS-2.html  FirefoxOS.html  Food.html  Free-Software.html  GNOME.html  Glean.html  GoFaster.html  Infraherder.html  Iodide.html  Irydium.html  Île-Sans-Fil.html  Life.html  MSF.html  Meditation.html  Meta.html  Metrics-Graphics.html  Mission-Control.html  Montreal.html  Mozilla-10.html  Mozilla-11.html  (+55 more)
tests/: test_build.py
(+216 files in other folders)
